tests/checker/diagnostics/0360_labels_wrong_y_type_04.ml
let pick_delta ~x:(x : int) ~y:(y : bool) = x
let _ = pick_delta ~x:3 ~y:4
